tests/spec/fail/map_mixed_values.aja
m = {"a": 1, "b": "x"}
